src/main/java/com/example/shop/web/error/GlobalExceptionHandler.java

package com.example.shop.web.error;

import jakarta.servlet.http.HttpServletRequest;
import org.springframework.http.ResponseEntity;
import org.springframework.web.bind.annotation.*;

@ControllerAdvice
public class GlobalExceptionHandler {

  @ExceptionHandler(NotFoundException.class)
  public ResponseEntity<ApiError> handleNotFound(NotFoundException ex, HttpServletRequest req) {
    return build(404, "Not Found", ex.getMessage(), req.getRequestURI());
  }

  @ExceptionHandler(ConflictException.class)
  public ResponseEntity<ApiError> handleConflict(ConflictException ex, HttpServletRequest req) {
    return build(409, "Conflict", ex.getMessage(), req.getRequestURI());
  }

  @ExceptionHandler(BadRequestException.class)
  public ResponseEntity<ApiError> handleBadRequest(BadRequestException ex, HttpServletRequest req) {
    return build(400, "Bad Request", ex.getMessage(), req.getRequestURI());
  }

  @ExceptionHandler(Exception.class)
  public ResponseEntity<ApiError> handleGeneric(Exception ex, HttpServletRequest req) {
    return build(500, "Internal Server Error", ex.getMessage(), req.getRequestURI());
  }

  private ResponseEntity<ApiError> build(int status, String error, String msg, String path) {
    ApiError a = new ApiError();
    a.status = status; a.error = error; a.message = msg; a.path = path;
    return ResponseEntity.status(status).body(a);
  }
}
